REFACTOR: title page

--- a/thesis.tex
+++ b/thesis.tex
@@ -13,6 +13,7 @@
 \newCJKfontfamily{\huawenxingkai}[AutoFakeBold = {1.1}]{STXingkai}
 \newCJKfontfamily{\huawenzhongsong}{STZhongsong}
 \setmainfont{Times New Roman}
+\setCJKmainfont{SimSun}  % Should be set here for cross platform.
 \bibliographystyle{gbt7714-numerical}
 \begin{document}
 \input{titlepage}
