TYPO: simplify the C++ and C# typing

--- a/thesis.tex
+++ b/thesis.tex
@@ -59,13 +59,13 @@
     \citestyle{authoryear}
     \begin{tabular}{cp{0.14\linewidth}cccp{0.22\linewidth}}
         \toprule
-        名称               & 父代模型         & 编程语言          & 时间步长 & 核心引用          & 支持决策工具 \\
+        名称               & 父代模型         & 编程语言 & 时间步长 & 核心引用          & 支持决策工具 \\
         \midrule
-        GOSSYM             & SIMCOTI SIMCOTII & Fortran           & 日       &                   & COMAX        \\
-        Cotton2K           & GOSSYM CALGOS    & $\mathrm{C^{++}}$ & 小时     &                   & 无           \\
-        COTCO2             & KUTUN ALFALFA    & Fortran           & 小时     &                   & 无           \\
-        OZCOT              & SIRATAC          & $\mathrm{C^{\#}}$ & 日       & \citet{hearn1994} & APSIM 生态   \\
-        CSM-CROPGRO-Cotton & CROPGRO-Soybean  & Fortran           & 日       &                   & DSSAT        \\
+        GOSSYM             & SIMCOTI SIMCOTII & Fortran  & 日       &                   & COMAX        \\
+        Cotton2K           & GOSSYM CALGOS    & C++      & 小时     &                   & 无           \\
+        COTCO2             & KUTUN ALFALFA    & Fortran  & 小时     &                   & 无           \\
+        OZCOT              & SIRATAC          & C\#      & 日       & \citet{hearn1994} & APSIM 生态   \\
+        CSM-CROPGRO-Cotton & CROPGRO-Soybean  & Fortran  & 日       &                   & DSSAT        \\
         \bottomrule
     \end{tabular}
     \citestyle{numbers}
