FIX: compile error and some warning

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,15 +1,4 @@
 
-======================================================================
-starting package maintenance...
-installation directory: C:\Users\tcztz\AppData\Local\Programs\MiKTeX
-package repository: https://mirrors.cqu.edu.cn/CTAN/systems/win32/miktex/tm/packages/
-package repository digest: abcf797dfcd03b51c100d3e07c06b21e
-going to download 67652 bytes
-going to install 42 file(s) (1 package(s))
-downloading https://mirrors.cqu.edu.cn/CTAN/systems/win32/miktex/tm/packages/latexindent.tar.lzma...
-0.07 MB, 1.05 Mbit/s
-extracting files from latexindent.tar.lzma...
-======================================================================
 \documentclass[a4paper,zihao=5]{ctexbook}
 \usepackage{geometry}
 \usepackage[inline]{enumitem} % inline enumerate
@@ -44,11 +33,11 @@ extracting files from latexindent.tar.lzma...
 
 \chapter{绪论}
 \section{研究背景及意义}
-新疆南部地区(南疆)日照时间长、光热资源丰富, 为优质棉花的生长提供了绝佳的自然条件.
-2017 年新疆棉花播种面积 2217 千公顷(全国 3195 千公顷), 产量 456 万吨(中国统计年鉴,2018), 是我国和世界最具发展前景的优质棉生产基地.
+新疆南部地区 (南疆) 日照时间长、光热资源丰富, 为优质棉花的生长提供了绝佳的自然条件.
+2017 年新疆棉花播种面积 2217 千公顷 (全国 3195 千公顷), 产量 456 万吨 (中国统计年鉴, 2018), 是我国和世界最具发展前景的优质棉生产基地.
 上世纪 80 年代以来, 新疆在棉花种植上大范围推广使用地膜覆盖技术, 给新疆农业增产、农民增收带来了巨大效益.
 但随着地膜投入量的不断增加, 残留地膜回收率低, 土壤中残膜量逐步增加, 不仅造成土壤结构破坏、环境污染等一系列问题, 而且对棉花产量和纤维品质也有很大影响.
-中国工程院院士喻树迅团队初步实现了 “中棉 619” 早熟品种在南疆地区的无膜化种植目标, 连续 6 年亩产 320-350 公斤, 对减少新疆棉田残膜对生态环境和原棉的污染意义重大.
+中国工程院院士喻树迅团队初步实现了 “中棉 619” 早熟品种在南疆地区的无膜化种植目标, 连续 6 年亩产 320 \~ 350 公斤, 对减少新疆棉田残膜对生态环境和原棉的污染意义重大.
 然而, 无膜棉的种植与推广还有诸多问题需要解决, 如播种密度和肥水调控等问题急需深入研究.
 因此, 在南疆干旱区开展无膜棉生长和水分运移模拟研究,
 对指导无膜棉播种日期、播种量、精准灌溉和提高产量具有重要意义.
@@ -82,18 +71,18 @@ extracting files from latexindent.tar.lzma...
 \end{table}
 
 这些模型通过模拟气象、土壤水分和养分对植物生长发育的贡献来估算作物产量.
-然而, 用于模拟这些过程的方法、模拟细节和产量组分在现有作物模型中存在一定差异(表 \ref{tab:growdev})\cite{thorp2014}.
-但主要过程都包括了物候学、光能截获、碳(C)同化、呼吸作用、器官形成、生物量积累与分配和胁迫影响等.
+然而, 用于模拟这些过程的方法、模拟细节和产量组分在现有作物模型中存在一定差异 (表~\ref{tab:growdev})\cite{thorp2014}.
+但主要过程都包括了物候学、光能截获、碳 (C) 同化、呼吸作用、器官形成、生物量积累与分配和胁迫影响等.
 
 一些新发展的通用模型理论和方法也对棉花生长模拟的研究具有重要的推动作用.
-由联合国粮食及农业组织(FAO)支持的 AquaCrop 模型是模拟水资源管理产量响应的新型通用作物模型\cite{tan2018}.
+由联合国粮食及农业组织 (FAO) 支持的 AquaCrop 模型是模拟水资源管理产量响应的新型通用作物模型\cite{tan2018}.
 它基于植物生理学和土壤水分平衡的模拟, 取代了粮农组织以前的方法, 用于估算与供水有关的作物生产力.
 另外, 发展和参数化的 WALL 模型也通过聚焦水分在叶片运移用于仿真单叶的水分蒸发\cite{pachepsky2009}.
 2021 年最新版本的 SWAP 4.0 版本\cite{swap2021}综合考虑了水、热、冷和盐分胁迫对蒸发蒸腾的影响, 多尺度 SWAP 模型是否可以改进已提出的棉花模型的水分运移模拟值得深入分析和探讨。
 
 虽然中国的棉花生长模型研究起步较晚, 但作为棉花生产世界领先的国家,
 棉花生长模拟的研究发展较快, 比较有代表性的是潘学标等开发的 COTGROW\cite{pan1996} 模型, 此外, \citet{zhang2003}、\citet{chen2006}和\citet{ma2004}等也分别建立了棉花生长和品质形成模拟模型, 这些模型在借鉴国外模型理念基础上, 加入了我国特有的管理措施如化控、覆膜等.
-另外, 国内学者也开发了棉花发育阶段和蕾铃模拟模型\cite{ma2005}、棉籽生长、油和蛋白质含量模拟模型\cite{li2009}和基于气温、太阳辐照度和 N 效应的棉纤维长度和强度的模拟模型 \cite{zhao2012} 等.
+另外, 国内学者也开发了棉花发育阶段和蕾铃模拟模型\cite{ma2005}、棉籽生长、油和蛋白质含量模拟模型\cite{li2009}和基于气温、太阳辐照度和 N 效应的棉纤维长度和强度的模拟模型\cite{zhao2012}等.
 然而, 不同的模型的性能会随着研究的品种、种植模式、生长环境和使用目标的变化呈现一定的差异性.
 
 \begin{table}
@@ -107,7 +96,7 @@ extracting files from latexindent.tar.lzma...
         物候学     & 根据积温发育叶枝果枝和坐果节, 计算果枝、蕾、铃、开铃、坐果节和脱落果实的数量 & 根据积温发育叶枝果枝和坐果节, 计算果枝、蕾、铃、开铃、坐果节和脱落果实的数量 & 根据积温发育分生组织、叶原基、叶柄，生长和成熟叶、节间茎段、蕾、铃和开铃 & 根据积温计算坐果节的数量，根据作物承载能力计算蕾、铃、开铃和脱落果实的数量 & 根据光热时间计算出苗、第一片叶、第一朵花、第一个种子、第一次开铃和 90\% 开铃、铃数和脱落果实数量 \\
         植株映射   & 有                                                                           & 有                                                                           & 有                                                                       & 无                                                                         & 无                                                                                               \\
         潜在碳同化 & 冠层尺度辐射截获                                                             & 冠层尺度辐射截获                                                             & 器官尺度生物化学驱动 \cite{farquhar1980}                                 & 冠层尺度辐射截获                                                           & 叶片尺度生物化学驱动 \cite{farquhar1980}                                                         \\
-        呼吸作用   & 使用生物量和温度的经验函数计算                                               & 计算生长和维持呼吸，以及光合呼吸                                             & 计算器官尺度的生长、维持和光合呼吸                                       & 使用基于坐果节数和气温的经验函数                                           & 计算生长和维持呼吸                                                                               \\
+        呼吸作用   & 使用生物量和温度的经验函数计算                                               & 计算生长和维持呼吸, 以及光合呼吸                                             & 计算器官尺度的生长、维持和光合呼吸                                       & 使用基于坐果节数和气温的经验函数                                           & 计算生长和维持呼吸                                                                               \\
         同化分配   & 分配碳同化产物到每个生长器官                                                 & 分配碳同化产物到每个生长器官                                                 & 分配碳同化产物到每个生长器官                                             & 将碳同化产物分配到用于棉铃发育的储存池                                     & 将碳同化产物分配到用于叶、茎、根和铃发育的单一存储池                                             \\
         冠层尺寸   & 计算高度                                                                     & 计算高度                                                                     & 计算茎节长度                                                             & 无                                                                         & 计算高度和宽度                                                                                   \\
         产量要素   & 根据棉铃的质量和尺寸计算纤维质量                                             & 计算纤维质量和种子棉质量                                                     & 计算棉铃质量                                                             & 根据棉铃的质量和尺寸计算纤维质量                                           & 计算棉铃质量、种子棉质量、种子数量和单位种子重量                                                 \\
