REFACTOR: seperate abastract

--- a/thesis.bib
+++ b/thesis.bib
@@ -207,10 +207,12 @@
 @thesis{ma2004,
   type = {博士},
   title = {棉铃发育及纤维品质形成的生态效应与模拟研究},
-  author = {{马富裕} and {曹卫星} and {李少昆}},
+  author = {{马富裕}},
   date = {2004},
   institution = {{南京农业大学}},
   abstract = {深刻理解生态因子对棉铃干物质积累与分配及纤维品质形成的影响，定量研究棉铃发育及纤维品质形成是棉花生长模拟研究的重要内容，对指导棉花高产优质栽培和品质生态区划具有重要的理论价值和实践意义。本研究以系列生理生态试验为依托，综合运用生长分析、生理生化测试以及数理统计分析等手段，明确了不同品种棉铃增重及品质形成与气温、光照、氮素营养、土壤水分的关系，构建了基于生理发育时间的棉铃干物质积累与分配、纤维品质形成和铃重及纤维品质空间分布的模拟模型。研究结果为发展和完善棉花生长和产量形成的模拟模型及实现精确发育调控和品质管理提供了理论基础与关键技术。 在我国当前三大棉区4个典型生态点进行了联合试验，采用``异地分期种植比较法''研究了光温生态因子对棉花铃重及纤维品质的影响。结果表明，随纬度升高，由中熟棉区向北疆早熟棉区推移过程中，铃重提高，纤维加长、比强度下降、麦克隆值降低、可溶性糖含量增加。影响棉花铃重的关键气象因子贡献率由大到小依次为日照时数、{$\geq$}15\textcelsius 有效积温、日温差；适宜于棉铃发育的最适日均温为24.7\textcelsius ，最适日温差13.7\textcelsius 。随纬度增加由长江流域中熟棉区到北疆早熟棉区的推移过程中，{$\geq$}15\textcelsius 有效积温及日均温由对铃重增加的限制作用逐渐变为促进作用，日温差由对铃重的促进作用变为抑制作用，日照时数由显著的促进作用变为作用不显著。根据棉花纤维品质与气温的关系，若以获得优质纤维为先决条件时，则分别以铃期日均温21.3～29.7\textcelsius ，最低气温10.7～21.3\textcelsius ，最大日温差不超过15.2\textcelsius 为宜，日均温25.4\textcelsius 时纤维最长；若以获得纺织业所能接受最低标准的棉纤维品质为先决条件时，则分别为铃期日均温不低于15.5\textcelsius ，最低气温不低于10.7\textcelsius ，最大日温差不超过17.9\textcelsius 。 通过遮光模拟试验确立了棉铃发育及纤维品质形成与光照强度间的关系。结果表明，随光照强度下降，棉花单株结铃数降低，棉铃最终生长量、相对增长速率、最大干物质积累速率都随之下降，棉铃干物质积累期延长，单铃棉子数减少，铃壳重、子粒重和纤维重降低。光照强度下降对棉铃各组分干物质积累影响最大的是纤维重，其次是粒重，对铃壳重影响最小。 通过定量分析不同试验点不同播期和不同品种棉花生育阶段与环境因子之间的动态关系，建立了基于生理发育时间(PDT)的棉花生育阶段、果枝出现时间及蕾铃 博士学位论文棉铃发育及纤维品质形成的生态效应与模拟研究 发育进程的模拟模型.在模型的热效应计算中考虑了不同生态区昼夜温较差对棉花发 育速率的影响以及薄膜覆盖的增温效应，在模型中引入了果枝始节系数(F IND、日照 时数因子(S HF)和果枝节位光照系数(F BRI)因子.利用不同年份、生态区、基因型的 棉花生育进程试验资料对模型进行了参数估计和测试检验，结果表明，不同生育时期 的模拟值与观测值的根均方差(RMsE)从播种到出苗、现蕾到开花、开花到吐絮及播 种到吐絮分别为 0.9、2.2、2.3和l.7d，平均2.ld;棉株各果节点从现蕾到开花的RMSE 为1.8一3.7d，从开花到吐絮的RMSE值为4.6一5.8d。 以影响棉铃发育的生理生态过程为基础，采用棉铃生理发育时间作为定量其发育 进程的尺度，构建了预测棉铃干物质积累与分配的动态模拟模型。利用不同生态区、 年份下不同日照时数、日差温条件及不同水分、氮素及光照强度处理的试验资料对模 型进行了检验，结果表明，不同日照时数及日温差互作下棉铃干物质积累模拟值与观 测值的RMsE为0.3。\textasciitilde 0.40和gboll-，，不同水分、氮素和光照强度处理的铃重、铃 壳重、种子重及纤维重的RMsE分另!J为0.35、0.32、0.30和0.259{$\cdot$}boll.'. 在系统分析棉纤维品质形成与生态因子关系的基础上建立了基于开花后天数的 纤维伸长及基于棉铃生理发育时间的纤维比强度增加和纤维素积累的模拟模型。对纤 维伸长、比强度增加和纤维素积累的动态模拟模型预测精度的检验结果显示，模拟值 与观测值的RMSE分别为1 .15mm、1.03cN.tex一，和4.37\%，表明模型具有较好的预测 性. 以棉株不同节位棉铃发育的差异性为依据，综合考虑水分、氮素、温度及光照因 素对棉花铃重及纤维品质的影响，建立了棉花铃重及纤维品质的空间分布模拟模型. 利用独立田间试验资料对模型进行了检验，结果表明，全铃重、子粒数、粒重及纤维 长度、比强度、麦克隆值和可溶性糖含量的RMsE分别为0.799七oll`'、1 .13粒.boll一'、 1 .63mg{$\cdot$}gain一l、1 .50mm、l.29eN{$\cdot$}tex一l、0.60、0.220，0。 总之，本研究以棉铃增重和纤维品质形成与生态因子间的定量关系为基础，综合 构建了棉花铃重及纤维品质形成的动态模型，为棉花生态效应分析及优质高产管理提 供了定量化依据.同时，首次构建了棉铃干物质积累与分配、纤维品质形成、铃重与 纤维品质空间分布的模拟模型。但由于可供借鉴和利用的资料有限，模型的预测性和 普适性有待于作进一步检验和完善。 关键词:棉铃;纤维品质;生态因子;棉铃生理发育时间;棉铃干物质积累;棉铃 干物质分配;空间分布;模拟模型},
+  editora = {{曹卫星} and {李少昆}},
+  editoratype = {collaborator},
   keywords = {棉铃,棉铃干物质分配,棉铃干物质积累,棉铃生理发育时间,模拟模型,生态因子,空间分布,纤维品质}
 }
 
@@ -408,6 +410,21 @@
   langid = {english}
 }
 
+@article{spittersSeparatingDiffuseDirect1986,
+  title = {Separating the Diffuse and Direct Component of Global Radiation and Its Implications for Modeling Canopy Photosynthesis {{Part I}}. {{Components}} of Incoming Radiation},
+  author = {Spitters, C. J. T. and Toussaint, H. A. J. M. and Goudriaan, J.},
+  date = {1986-10-01},
+  journaltitle = {Agricultural and Forest Meteorology},
+  shortjournal = {Agricultural and Forest Meteorology},
+  volume = {38},
+  number = {1},
+  pages = {217--229},
+  issn = {0168-1923},
+  doi = {10.1016/0168-1923(86)90060-2},
+  abstract = {In modeling canopy photosynthesis, it is important to discriminate between the direct and diffuse components of incoming, global radiation. An equation is presented to estimate the share of both components from the measured daily global irradiance only. In this equation the share of the diffuse component is related to the ratio between global and extra-terrestrial radiation. This relation is based on a summary of literature data and of radiation measurements in The Netherlands. The diurnal trends of global, direct and diffuse radiation were derived from a sinusoid with a correction depending on solar angle. The random variation around this sine wave is characterized. For clear skies about 15\% of the diffuse flux comes predominantly from directions near the sun and this circumsolar component has to be added to the direct flux. On the other hand, for clear skies the diffuse fraction in the photosynthetically active wave bands is about 40\% larger than that for the total global radiation. In the past, the partitioning between direct and diffuse radiation was tackled by assuming that short periods of either fully clear or overcast conditions alternate within the day. That approach severely underestimated the share of the diffuse component in the total global radiation. The method presented in this paper is particularly useful for application in crop growth models.},
+  langid = {english}
+}
+
 @article{steduto2009,
   title = {{{AquaCrop-The FAO Crop Model}} to {{Simulate Yield Response}} to {{Water}}: {{I}}. {{Concepts}} and {{Underlying Principles}}},
   shorttitle = {{{AquaCrop-The FAO Crop Model}} to {{Simulate Yield Response}} to {{Water}}},
@@ -565,11 +582,13 @@
 @thesis{zhang2003,
   type = {博士},
   title = {基于过程的棉花生长发育模拟模型},
-  author = {{张立桢} and {曹卫星} and {夏敬源}},
+  author = {{张立桢}},
   date = {2003},
   journaltitle = {南京农业大学},
   institution = {{南京农业大学}},
   abstract = {棉花生长模拟模型是建立棉花生产管理决策系统的重要基础，也是评价棉花生产潜力、预测气候变化的影响及智能化栽培和辅助育种的有力工具。本研究借鉴国内外先进的作物模拟理论和方法体系，在充分吸收了和利用已有研究成果的基础上，结合田间试验研究，对棉花生长发育基本规律及其与环境因子的互作进行了系统分析和综合，从而构建了一个基于生理生态过程的具有广泛适用性的棉花生长发育模拟模型，为实现棉花生长调控的信息化和数字化奠定了基础。 模型基于棉花生长发育的生理生态过程，以生理发育时间作为定量棉花发育进程的通用尺度，选用有效的函数类型和品种早熟性参数，充分考虑了温度、光周期和品种遗传特性等因子对棉花发育进程的影响和因子间的互作。模型以生理发育时间作为棉花的生理年龄，较发育阶段和发育指数尺度的连续性好，并且生理意义更加明确。模型对全国区试3年不同站点和不同生态区的区试资料和试验数据进行了系统分析，构建了不同类型品种的遗传性参数，保证了不同类型品种到达特定发育阶段所需的生理发育时间恒定。采用土壤温度模拟棉花出苗过程，充分考虑了地膜覆盖的土壤增温效应，并通过温度补偿效应系数CE，量化了地温对气温的补偿作用，保证了地膜覆盖条件下生理发育时间的恒定，使模型适合于地膜覆盖栽培。 引用简便有效的高斯积分法计算冠层每日的总光合同化量，不但考虑了光合有效辐射的日变化规律，而且考虑了太阳高度角的变化对冠层直射光消光系数的影响。模型在考虑了直射PAR对光合作用贡献的同时，还考虑了天空散射辐射、冠层内叶片对PAR的透射和反射作用以及土壤表面对PAR的反射作用。 形态发生模拟利用生理热效应RTE为模型的驱动因子，较充分地量化了适温范围以外的不利效应，同时RTE还涵盖了地膜覆盖对形态发生的作用。叶片数、株高、果枝和果节的模拟精度RMSE分别达到了0.7片、1.6cm、0.8个和3.3个。 叶面积指数模拟应用了同化物的源、库、流关系，分别模拟了棉花生育过程中源或库不足时的叶面积指数增长过程，并进行了有效综合。模型经过不同基因型和管理措施下的校正，在不同品种和管理方式下模拟精度达到了0.3，具有较好的适应性。 结合田间根钻取样和图像扫描分析方法，研究了棉花根系长度、直径和表面积生长动态及其在0-100cm深0-40cm宽土壤范围内的空间分布。与常规直尺测量结果相比，根系图像扫描分析法具有较强的先进性和可靠性(R=0.948，n=1318)。研究表明，棉花平均根长密度(RLD)，在花铃期为1.21-1.27mm．cm\textasciitilde (-3)，吐絮后降至1.04-1.12mm．cm\textasciitilde (-3)，收花时为0.76mm．cm\textasciitilde (-3)。棉花根系平均直径在不同基因型间存在显著差异(P=0.022)， 以杭虫杂交棉的根系直径最粗，平均为0.52\textasciitilde;早熟类型品种根系直径较细，平均 只为o.36mm，且在土壤深度上的差异不显著少=0.869)，但距棉行距离越远，根系的平 均直径越小甲=0.000)。在研究根系长度和直径动态规律的基础上，提出了根表面积指 数(RAI)的概念，与地上部叶面积指数具有相似的含义和生物学意义，且呈较好约 指数相关关系(Rz=0.779)。RAI在PDT小于等于40前，其增长动态符合LOGisTIC 生长规律(RZ=0.849);pDT大于40后，呈线性递减趋势(RZ为0.57一0.895)，且杂交 杭虫棉的RAI在全生育期内都明显高于其它类型品种，而早熟类型品种相对略低。RAI 空间分布特征为，开花前在浅根层内(0一30cm)分布最多，花铃期以中层根系('0一60cm) 为主，吐絮后主要以深层口O一loocm)和距棉行较远的行间较多。进一步提出了以RAI 代替RLD为根系因子分层模拟根系吸水量的模型，修正了含根系吸水函数的水量平 衡模型。 棉株在产量器官形成和发育过程中蕾铃脱落占总数的60一70\%，棉花蕾铃发育期占 全生育期的70\%左右，营养生长和生殖生长存在长期同生，所以给棉花蕾铃脱落的模 拟带来一定的难度。本研究采用车箱理论的方法，模拟不同基因型和管理措施下棉花 蕾铃发育和脱落的生理过程，并充分考虑了同化物供需比、水分和氮素亏缺的影响。 结果表明，利用这种系统模拟方法可以较准确定量棉花蕾铃发育和脱落过程，需要的 参数少，相对简单准确。 在系统分析不同基因型品种和不同管理措施下棉花干物质分配指数随生理发育 时间变化动态规律的基础上，吸收GOSSYM模型中潜在发育和同化物缓冲库的假设 理论，构建了棉花各器官干物质分配模型。首次将分配指数方法和潜在发育、缓冲库 理论结合在一起模拟棉花干物质分配和产量形成。 利用不同类型品种、年份、生态区、管理措施和播种期试验资料对模型进行了较 充分的校正与核实。结果表明，模型可以较好地预测不同环境、管理措施和基因型棉 花的生育期，模拟值与观测值的RMSE达到4.22d;可以较好地模拟叶片、株高、果 枝等器官发生以及叶面积指数、蕾铃脱落、单铃重、干物质分配、籽棉产量和皮棉产 量等，如不同品种和管理方式下LAI、脱落率、皮棉产量的模拟精度RMSE分别为。.3、 8{$\cdot$}15\%和40{$\cdot$}49 kg.hm一2。 本模型具有较强的系统性、机理性、解释性与预测性，使用参数少，易确定，简 便实用，但模型对叶片衰老过程及其死亡?},
+  editora = {{曹卫星} and {夏敬源}},
+  editoratype = {collaborator},
   keywords = {产量形成,棉花,模拟模型,生长发育,蕾铃脱落}
 }
 
