--- a/thesis.tex
+++ b/thesis.tex
@@ -18,18 +18,7 @@
 \pagestyle{plain}
 \begin{document}
 \input{titlepage}
-\chapter*{摘要}
-无膜栽培技术是解决南疆地区棉田残膜污染的有效手段。
-项目拟通过模型模拟定量评价种植密度和灌溉制度对无膜棉生长和产量的影响，
-以 Cotton2K 模型为基础，重点解决棉花生长模拟过程中的两个关键科学问题：
-\begin{enumerate*}
-    \item 棉花不同发育阶段有效光合叶面积指数在冠层的空间分布不一致。
-    \item 光能截获、盐分和根系分布对水分运移的耦合影响和定量描述。
-\end{enumerate*}
-首先，综合考虑热效应和光周期效应模拟物候学发育时间；
-其次，建立有效面积指数在冠层空间分布比例与生理发育时间的分段函数方程，改进光能截获模拟精度，构建基于过程的棉花光合生产与干物质积累模型；
-再次，IRE 方法改进水分运移方程上下边界条件，采用根系吸水与根长密度分布统一求解的方法，分层计算盐分和根系分布对水分运移的影响，建立考虑冠层光能截获、根系和盐分空间分布的水分运移模型；
-最后，量化棉花各器官干物质分配、蕾铃发育与脱落过程，构建棉花干物质分配与产量形成的模拟模型。
+\include{abstract}
 \include{intro}
 \printbibliography
 \end{document}
