--- a/intro.tex
+++ b/intro.tex
@@ -1,10 +1,10 @@
 \chapter{绪论}
 \section{研究背景及意义}
 新疆南部地区 (南疆) 日照时间长、光热资源丰富，为优质棉花的生长提供了绝佳的自然条件.
-2017 年新疆棉花播种面积 2217 千公顷 (全国 3195 千公顷)，产量 456 万吨 (中国统计年鉴, 2018)，是我国和世界最具发展前景的优质棉生产基地。
+2021 年新疆棉花播种面积 2506.1 千公顷 (全国 3028.1 千公顷)，产量 500.2 万吨 (全国 512.9 万吨) \cite{国家统计局关于2021年棉花产量的公告}，是我国和世界最具发展前景的优质棉生产基地。
 上世纪 80 年代以来，新疆在棉花种植上大范围推广使用地膜覆盖技术，给新疆农业增产、农民增收带来了巨大效益。
 但随着地膜投入量的不断增加，残留地膜回收率低，土壤中残膜量逐步增加，不仅造成土壤结构破坏、环境污染等一系列问题，而且对棉花产量和纤维品质也有很大影响。
-中国工程院院士喻树迅团队初步实现了 “中棉 619” 早熟品种在南疆地区的无膜化种植目标，连续 6 年亩产 320{-}350 公斤，对减少新疆棉田残膜对生态环境和原棉的污染意义重大。
+中国工程院院士喻树迅团队初步实现了 “中棉 619” 早熟品种在南疆地区的无膜化种植目标，连续 6 年亩产 320{-}350 公斤，对减少新疆棉田残膜对生态环境和原棉的污染意义重大\cite{yu2019}。
 然而，无膜棉的种植与推广还有诸多问题需要解决，如播种密度和肥水调控等问题急需深入研究。
 因此，在南疆干旱区开展无膜棉生长和水分运移模拟研究，
 对指导无膜棉播种日期、播种量、精准灌溉和提高产量具有重要意义。
