--- a/thesis.bib
+++ b/thesis.bib
@@ -48,6 +48,18 @@
   keywords = {决策支持系统,单铃干物质积累分配模型,器官建成与蕾铃脱落模型,棉花,生育期模型,生长模拟系统,纤维品质模型}
 }
 
+@book{ChinaStatsYearBook2020,
+  title = {中国统计年鉴},
+  author = {{国家统计局}},
+  date = {2020},
+  publisher = {{中国统计出版社}},
+  editorb = {{刘爱华} and {叶植材}},
+  editorbtype = {redactor},
+  isbn = {978-7-5037-9225-0},
+  pagetotal = {373-402},
+  keywords = {12 农业}
+}
+
 @online{cotton2kv4,
   title = {{{Cotton2K Version}} 4.0},
   author = {Marani, Avishalom},
@@ -60,11 +72,14 @@
 
 @article{fao56,
   title = {Crop Evapotranspiration. {{Guidelines}} for Computing Crop Water Requirements},
-  author = {Allen, R. G. and Pereira, L. S. and Raes, D. and Smith, M.},
+  author = {Allen, Richard G. and Pereira, Luis S. and Raes, Dirk and Smith, Martin},
   date = {1998},
-  journaltitle = {FAO Irrigation and Drainage Paper (FAO)},
+  journaltitle = {FAO, Rome},
+  volume = {300},
+  number = {9},
+  pages = {D05109},
   publisher = {{FAO}},
-  url = {https://scholar.google.com/scholar_lookup?title=Crop+evapotranspiration.+Guidelines+for+computing+crop+water+requirements&author=Allen%2C+R.G.&publication_year=1998},
+  url = {https://www.scscourt.org/complexcivil/105cv049053/volume3/172618e_5xagwax8.pdf},
   urldate = {2021-11-26},
   abstract = {AGRICULTURAL SCIENCE AND TECHNOLOGY INFORMATION},
   isbn = {9789251042199},
@@ -305,12 +320,16 @@
 
 @article{pachepsky2009,
   title = {Pima Cotton Leaf Transpiration Analysis Using the {{WALL}} Model That Accounts for Liquid Water Movement},
-  author = {Pachepsky, L. and Ferreyra, R. and Sadeghi, A.},
+  author = {Pachepsky, L. and Ferreyra, R. Andres and Sadeghi, A.},
   date = {2009},
-  journaltitle = {undefined},
-  url = {https://www.semanticscholar.org/paper/Pima-cotton-leaf-transpiration-analysis-using-the-Pachepsky-Ferreyra/c05ddceb9979ccb8b4df1b5903548240a4298310},
-  urldate = {2021-11-26},
-  abstract = {A b s t r a c t. Leaf transpiration of eight genotypes of Pima cotton was measured in the field of the Maricopa Agricultural Center in August 1994. Photomicrographs of leaf cross-sections and of the leaf surfaces were scanned and analyzed with the image analysis software. The data were used to parameterize the new WALL model, developed in this study to analyze the leaf transpiration with a special emphasis to liquid water movement inside the leaf. The transpiration stream was assumed to go from vein endings in two directions, towards the upper and lower leaf surfaces. These fluxes were presented as two parallel currents driven by the water vapour concentration difference between the atmosphere and the open surface of the vein endings and on the mesophyll and epidermis (inner parts) cells' surfaces as a flow in thin films of water. Simulations were run to estimate quantitatively the contribution of the cuticular transpiration to the total amount of leaf transpiration stream, to evaluate the role of the mesophyll cell walls' surfaces in the water transfer inside the leaf, and to calculate the dependence of transpiration and its components on temperature. Simulation results showed (1) a major role of the cuticular transpiration as a leaf cooling mechanism and (2) that the cell wall properties can affect water film characteristics that also affect the transpiration course. K e y w o r d s: Gossipium barbadense L., cuticular transpiration, mesophyll cell walls, electric analogy, the WALL model},
+  journaltitle = {International Agrophysics},
+  shortjournal = {Int. Agrophysics},
+  volume = {23},
+  number = {4},
+  pages = {367--376},
+  issn = {0236-8722},
+  url = {http://www.international-agrophysics.org/Pima-cotton-leaf-transpiration-analysis-using-the-WALL-model-that-accounts-for-liquid,106457,0,2.html},
+  abstract = {Leaf transpiration of eight genotypes of Pima cotton was measured in the field of the Maricopa Agricultural Center in August 1994. Photomicrographs of leaf cross-sections and of the leaf surfaces were scanned and analyzed with the image analysis software. The data were used to parameterize the new WALL model, developed in this study to analyze the leaf transpiration with a special emphasis to liquid water movement inside the leaf. The transpiration stream was assumed to go from vein endings in two directions, towards the upper and lower leaf surfaces. These fluxes were presented as two parallel currents driven by the water vapour concentration difference between the atmosphere and the open surface of the vein endings and on the mesophyll and epidermis (inner parts) cells' surfaces as a flow in thin films of water. Simulations were run to estimate quantitatively the contribution of the cuticular transpiration to the total amount of leaf transpiration stream, to evaluate the role of the mesophyll cell walls' surfaces in the water transfer inside the leaf, and to calculate the dependence of transpiration and its components on temperature. Simulation results showed (1) a major role of the cuticular transpiration as a leaf cooling mechanism and (2) that the cell wall properties can affect water film characteristics that also affect the transpiration course.},
   langid = {english}
 }
 
@@ -564,6 +583,26 @@
   doi = {10.1016/j.fcr.2016.07.013}
 }
 
+@book{XinjiangStatsYearBook2020,
+  title = {新疆统计年鉴},
+  author = {{新疆维吾尔自治区统计局} and {国家统计局新疆调查总队}},
+  date = {2019},
+  publisher = {{中国统计出版社}}
+}
+
+@article{yu2019,
+  title = {无膜棉对中国棉花产业转型升级的意义},
+  author = {{喻树迅}},
+  date = {2019},
+  journaltitle = {农学学报},
+  volume = {9},
+  number = {03},
+  pages = {1--5},
+  issn = {2095-4050},
+  abstract = {近年来,中国农用地膜使用量和覆盖面积逐年上升,但随着地膜的长期使用,残膜污染问题日益严重,尤以2017年产量占国内棉花总产74.41\%的新疆棉区为甚。新疆棉田内的地膜残留量平均达到了330 kg/hm\textasciitilde 2,是全国平均水平的4～5倍,污染严重的个别田块达到735 kg/hm\textasciitilde 2,严重影响了棉花产量和原棉品质。无膜棉由于省去了地膜、铺膜揭膜和地膜回收等投入能够大幅降低生产成本,杜绝残膜对原棉的污染,确保原棉品质和价格,保护棉田生态环境保障棉花稳产高产,是确保中国棉花产业可持续发展和提高棉花产业国际竞争力的必由之路。},
+  keywords = {产业结构,地膜污染,无膜棉,棉花产业,转型升级}
+}
+
 @article{zelekeTestingApplicationAquaCrop2020,
   title = {Testing and {{Application}} of the {{AquaCrop Model}} for {{Wheat Production Under Different Field Management Conditions}} in {{South-Eastern Australia}}},
   author = {Zeleke, Ketema and Nendel, Claas},
@@ -616,6 +655,15 @@
   abstract = {Simulation of the formation of cotton (Gossypium hirsutum L.) fiber length and strength is still an area of great uncertainty. The aim of this study was to develop a model for simulating cotton fiber length and strength formation and explaining the effect of genotype, weather (temperature and solar radiation), and crop N supply on the two indices. The duration of fiber elongation for fiber length formation and secondary wall synthesis for fiber strength formation were determined as proportional to the boll physiological developmental time (PDT), which was simulated as a function of temperature, radiation, and N. The effect of temperature and radiation on fiber length and strength was modeled as a function of the photo-thermal product (PTP), the product of thermal effectiveness and radiation. The subtending leaf N concentration per unit area of cotton boll (NA) was used as the indicator of boll N nutrition. The changes of NA with boll development, N application rate, and boll position were simulated by a semi-empirical formula. Based on the relations between the actual and critical NA, the nitrogen response functions for the formation of fiber length and strength parameters were quantified, accounting for the interactive effects of N nutrition and PTP. Calibration and validation of the model were made using fiber quality data obtained from three years with two sowing dates and three or four N application rates at three locations in China. The average RMSE and RE for cotton fiber length and strength predictions were 1.03mm and 12.4\%, 2.20cNtex-1 and 10.4\%, respectively. The proposed model well explained the observed genotypic and environmental variations in fiber length and strength formation of cotton in China.},
   langid = {english},
   keywords = {Cotton,Crop model,Fiber length,Fiber strength,N,Temperature-radiation}
+}
+
+@online{国家统计局关于2021年棉花产量的公告,
+  title = {国家统计局关于2021年棉花产量的公告},
+  author = {{国家统计局}},
+  date = {2021-12-14},
+  url = {http://wap.stats.gov.cn/fb/202112/t20211214_1825241.html},
+  urldate = {2022-03-01},
+  langid = {chinese}
 }
 
 
